[package]
name = "project_timer"
version = "0.1.0"
authors = ["sivese <codersivese@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[dependencies]
gtk = "0.9.2"
gio = "0.9.1"
chrono = "0.4"
env_logger = "0.8.1"