[package]
name = "project_timer"
version = "0.1.0"
authors = ["sivese <codersivese@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"]}
glib = "0.15.12"
glib-macros = "0.15.11"